columnSelect: fix overflow in FF in modals

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -1195,6 +1195,17 @@ fieldset {
   }
 }
 
+/*
+
+Firefox Specific Hack
+to fix the overflow of column select with long names
+https://stackoverflow.com/questions/17408815/fieldset-resizes-wrong-appears-to-have-unremovable-min-width-min-content/17863685#17863685
+
+*/
+@-moz-document url-prefix() {
+  fieldset { display: table-cell; }
+}
+
 fieldset > .form-group {
   padding: 0 4px;
 
